Fix main wrapper element children overflow
Post details page main wrapper image child growing to0 big horizontally.
 the images inside its child causes layout to expand more than what it
is suppose to be.

--- a/src/components/PostImages/PostImages.module.css
+++ b/src/components/PostImages/PostImages.module.css
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex: 1;
   padding: 2rem 0;
   gap: 2rem;
   overflow-y: auto;
