--- a/src/pages/PostDetailsPage/PostDetailsPage.module.css
+++ b/src/pages/PostDetailsPage/PostDetailsPage.module.css
@@ -1,14 +1,9 @@
 .mainWrapper {
   font-family: "inter", system-ui, sans-serif;
-  display: flex;
+  display: grid;
+  max-width: 100%;
+  grid-template-columns: 1fr max(25vw, 350px);
   flex: auto;
-}
-
-.postImages {
-  display: flex;
-  background-color: #141414;
-  flex: auto;
-  min-width: 0;
 }
 
 .postData {
@@ -17,7 +12,6 @@
   align-items: flex-start;
   background-color: #000000;
   padding: 1.5rem 2rem;
-  width: max(25vw, 350px);
   gap: 1rem;
   overflow-y: auto;
 }
